[BUILD] Created a production web page.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && cd build && rename index.html 200.html && cd ../ && surge build teste-hostgator.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
